# Allocators

./: .gitignore  CMakeLists.txt  README.md
AllocatorTests/: CMakeLists.txt
AllocatorTests/PageAllocator/: BasicTests.cpp
Allocators/: CMakeLists.txt
Allocators/Include/: HoardAllocator.hpp  PageAllocator.hpp  Utility.hpp
Allocators/Source/: HoardAllocator.cpp  PageAllocator.cpp
CMake/: catch2.cmake
